# web_server

./: .gitignore  A_Request.hpp  CGI.cpp  CMakeLists.txt  ChunckContentHandler.hpp  FileSystem.hpp  ListClients.hpp  Makefile  PostRequest.hpp  _http.hpp  client.cpp  client.hpp  confg.confg  dummyClient.cpp  filesystem.hpp  main.cpp  server.hpp  webserv
Configuration/: cfg.txt  cgi  clientRequest.txt  conf_origin.txt  confg.confg  tmp.txt
Includes/: FileSystem.hpp  Libraries.h  WebServer.h
ServerConfig/Configs/: confg.confg
Src/Classes/: A_Request.cpp  A_Response.cpp  BodyChunk.cpp  BoundaryHandler.cpp  CGI.cpp  CGIResponse.cpp  Chunk.cpp  ChunkContentHandler.cpp  Client.cpp  ClientInfo.cpp  ClientInfos.cpp  Configurations.cpp  Const.cpp  DeleteRequest.cpp  FileSystem.cpp  Header.cpp  HeaderPath.cpp  Http.cpp  ListClients.cpp  LocationConfig.cpp  MyBuffer.cpp  MyWebServer.cpp  PostRequest.cpp  Response.cpp  Server.cpp  ServerConfig.cpp  SyntaxTree.cpp
Src/Classes/configParser/: ConfigParser.cpp  ServerConfigs.cpp
Src/Headers/: BodyChunk.h  CGI.h  Chunk.h  ChunkContentHandler.hpp  Client.h  Client.hpp  ClientInfo.h  Configurations.h  Const.h  Header.h  HeaderPath.h  Http.hpp  ListClients.hpp  LocationConfig.h  MyBuffer.h  MyWebServer.h  Response.h  Server.h  ServerConfig.h  SyntaxTree.h
Src/Includes/: includes.hpp
Src/Utils/: Utils.cpp
public/: 8.txt  form.html  main.py  ل.txt
public/errors/: 400.html  404.html
static/: StaticErrorPages.hpp  StatusCode.hpp  error400.html  error404.html  error405.html  error413.html
(+3 files in other folders)
